plugins {
    id 'java'
    id 'jacoco'
    id 'io.franzbecker.gradle-lombok' version '3.3.0'
    id 'com.adarshr.test-logger'
}

dependencies {
    implementation 'com.google.guava:guava:28.2-jre'
    implementation 'net.sourceforge.owlapi:owlapi-distribution:5.1.13'
    implementation 'org.slf4j:slf4j-api:1.7.30'
    implementation 'org.slf4j:slf4j-simple:1.7.30'
    implementation 'io.vavr:vavr:0.10.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.1'
    testImplementation 'org.assertj:assertj-core:3.15.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.1'
}

compileJava {
    options.compilerArgs += ["--enable-preview", "-Xlint:preview" ]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview", "-Xlint:preview" ]
    sourceCompatibility = 13
    targetCompatibility = 13
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
    maxHeapSize = '1G'
    ignoreFailures = false
    failFast = true

    filter {
        includeTestsMatching "*Test"
    }
}

